--- a/assets/scss/components/tabs.scss
+++ b/assets/scss/components/tabs.scss
@@ -8,6 +8,6 @@
   .show > .nav-link {
     @extend .text-dark;
     @extend .font-weight-bold;
-    border-bottom: 2px solid $primary-color;
+    border-bottom: 2px solid $primarycolor;
   }
 }
