--- a/components/login/index.html
+++ b/components/login/index.html
@@ -24,7 +24,7 @@
 					<div class="row">
 						<div class="col-12">				
 							<div class="_field-input _with-icon _underlined">
-								<input type="text" name="search" placeholder="Password" class="_form-control">
+								<input type="password" name="search" placeholder="Password" class="_form-control">
 								<i class="fas fa-lock _icon "></i>
 							</div>
 						</div>
